<resources>
    <string name="app_name">MyCookAssistant</string>
    <string name="main_page">首页</string>
    <string name="works">作品</string>
    <string name="collect">收藏</string>
    <string name="classification">分类</string>
    <string name="mine">我</string>

    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_settings">Setting</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="drawer_item_logout">注销账户</string>

    <string name="more">More</string>



    <!-- Strings related to login -->
    <string name="prompt_email">用户名：</string>
    <string name="prompt_password">密 码：</string>
    <string name="prompt_password_again">请确认密码：</string>
    <string name="action_sign_in">注册并登录</string>
    <string name="action_register">注册</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">密码必须大于四位</string>
    <string name="error_again_password">两次密码不匹配</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">此处必填</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="image_text">人世间 酸甜苦辣 若长良川......</string>
    <string name="action_settings">Settings</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>





</resources>
